--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 </head>
 <body>
    <h1>Yuyue Liu</h1> 
-   <img src="Myself.JPG" width="150px">
-   <dl>
-     <li>Student number: 041116760</li>
-     <li>Program: Interactive Media Design</li>
-     <li>Course code and name: 24W_MTM6201_040 Web Development II</li>
-     <li>About me: I have a master's degree in psychology. ✌️</li>
-   </dl>
+   <img alt="My picture" src="Myself.JPG" width="150">
+  <dl>
+    <dt>Student number</dt>
+    <dd>- 041116760</dd>
+    <dt>Program</dt>
+    <dd>- Interactive Media Design</dd>
+    <dt>Course code and name</dt>
+    <dd>- 24W_MTM6201_040 Web Development II</dd>
+    <dt>About me</dt>
+    <dd>- I have a master's degree in psychology. ✌️</dd>
+  </dl>
 </body>
 </html>
